# ai-evaluation-harness

./: .envrc  .gitattributes  .gitignore  README.md  lint.ps1  pyproject.toml  run.ps1  test.ps1  topics and questions.md  typecheck.ps1
.github/workflows/: ci.yml
baselines/: task_extraction.mock.baseline.json
datasets/: sample_tasks.jsonl
prompts/task_extraction/: v1.md
reports/: run-08429a04.json  run-0e7a7b02.json  run-7c4ccdf7.json  run-a81ec9eb.json  run-c7589988.json
schemas/: task_extraction.schema.json
src/ai_evaluation_harness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/eval_harness/: __init__.py  cli.py
src/eval_harness/adapters/: base.py  mock.py  openai_v1.py  usage.py
src/eval_harness/core/: dataset.py  metrics.py  report_types.py  runner.py  schemas.py
tests/: test_adapter_env_requirements.py  test_cli_quality_gates.py  test_metrics_f1.py  test_runner_report_shape.py  test_schema_validation.py  test_smoke.py
